[project]
name = "comfyui-crystools"
description = "With this suit, you can see the resources monitor, progress bar & time elapsed, metadata and compare between two images, compare between two JSONs, show any value to console/display, pipes, and more!\nThis provides better nodes to load/save images, previews, etc, and see \"hidden\" data without loading a new workflow."
version = "1.25.2"
license = { file = "LICENSE" }
dependencies = ["deepdiff", "torch", "numpy", "Pillow", "pynvml", "py-cpuinfo"]

[project.urls]
Repository = "https://github.com/crystian/comfyui-crystools"

[tool.comfy]
PublisherId = "crystian"
DisplayName = "comfyui-crystools"
Icon = "https://raw.githubusercontent.com/crystian/comfyui-crystools/main/docs/screwdriver.png"
